--- a/Project/SrvyProj/SrvyProjFinal/selectionPage.html
+++ b/Project/SrvyProj/SrvyProjFinal/selectionPage.html
@@ -17,7 +17,7 @@ function checkBtnCreate(){
 </script>
 
 <center>
-<button type="button" onclick="checkBtnCreate()">Create Survey</button> <button type="button" onclick="window.location.href='viewSurvey.php'">View Survey</button>
+<button type="button" onclick="checkBtnCreate()">Create Survey</button> <button type="button" onclick="window.location.href='listSurvey.php'">View Created Survey</button>
 </center>
 
 </body>
